# aws-mcp-server

./: .cursorignore  .dockerignore  .gitignore  CLAUDE.md  README.md  codecov.yml  progress_history.json  pyproject.toml  spec.md  tasks.py  update_progress.py
.github/workflows/: ci.yml  release.yml
deploy/docker/: Dockerfile  docker-compose.yml
scripts/: build-multiarch.sh
src/aws_mcp_server/: __init__.py  __main__.py  automation.py  cache.py  cli_executor.py  config.py  connection_pool.py  ml_ai.py  progress.py  prompts.py  resources.py  sampling.py  server.py  tools.py
src/aws_mcp_server/fleet_management/: __init__.py  alerts.py  alerts_tools.py  aws_discovery.py  configuration.py  configuration_executor.py  configuration_tools.py  deployment.py  deployment_tools.py  discovery.py  execution_tools.py  logs.py  logs_tools.py  models.py  monitoring.py  monitoring_tools.py  tools.py
src/aws_mcp_server/fleet_management/api/: __init__.py  api_server.py  api_tools.py  auth.py  rate_limiter.py
src/aws_mcp_server/fleet_management/integrations/: __init__.py  credential_tools.py  credentials.py  integration.py  integration_tools.py  transform.py  transform_tools.py  webhook_tools.py  webhooks.py
src/aws_mcp_server/queue/: __init__.py  celery_app.py  tasks.py
src/aws_mcp_server/security/: __init__.py  compliance.py  guardduty.py  iam_analyzer.py  secrets_manager.py  security_hub.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_aws_live.py  test_server_integration.py
tests/unit/: __init__.py  test_cli_executor.py  test_main.py  test_prompts.py  test_server.py  test_tools.py
tests/unit/security/: __init__.py  test_compliance.py  test_guardduty.py  test_iam_analyzer.py  test_secrets_manager.py  test_security_hub.py
